# hexora

./: .gitignore  Cargo.toml  LICENSE  README.md  manifest.in  pyproject.toml  setup.py  typos.toml
.github/workflows/: build_wheels.yml  tests.yml
crates/hexora/: Cargo.toml
crates/hexora/resources/test/: builtins_02.py  builtins_04.py  builtins_05.py  call_01.py  call_02.py  call_03.py  call_04.py  dll_injection_02.py  download_01.py  download_02.py  download_03.py  download_04.py  download_05.py  download_06.py  dunder_01.py  dunder_03.py  exec_04.py  exec_05.py  exec_06.py  exec_07.py  exec_08.py  exec_09.py  exec_10.py  exec_11.py  exec_12.py  exec_13.py  exec_14.py  exec_15.py  exec_16.py  exec_17.py  exec_18.py  exec_19.py  exec_20.py  exec_21.py  exec_22.py  exec_23.py  exec_24.py  exec_25.py  exec_26.py  exec_27.py  (+27 more)
crates/hexora/src/: benchmark.rs  cli.rs  io.rs  lib.rs  py.rs
crates/hexora/src/audit/: annotate.rs  helpers.rs  mod.rs  parse.rs  resolver.rs  result.rs
crates/hexora/src/indexer/: assignment.rs  checker.rs  encoding.rs  expression_handler.rs  index.rs  mod.rs  model.rs  name.rs  node_transformer.rs  resolver.rs  scope.rs  strings.rs  taint.rs  tests.rs  visitor.rs
crates/hexora/src/indexer/strings/: helpers.rs  mod.rs  resolver.rs  tests.rs  transformer.rs
crates/hexora/src/rules/: builtins.rs  call.rs  clipboard.rs  comments.rs  dll_injection.rs  download.rs  dunder.rs  env.rs  exec.rs  exec_test.rs  expression.rs  fingerprinting.rs  identifier.rs  imports.rs  literal.rs  mod.rs  screenshot.rs  statement.rs  test.rs  write.rs
crates/hexora/src/rules/exec/: mod.rs  report.rs  sequence.rs  signals.rs  subjects.rs
crates/hexora_io/: Cargo.toml
crates/hexora_io/src/: archive.rs  encoding.rs  lib.rs  locator.rs  macros.rs
crates/hexora_ml/: Cargo.toml
crates/hexora_ml/resources/test/: dataset.json
crates/hexora_ml/src/: cli.rs  dataset.rs  features.rs  generate.rs  lib.rs  model.json  model.rs  schema.rs
crates/hexora_ml/src/features/: ast.rs  import.rs  mod.rs  rule.rs  semantic.rs  source.rs  tests.rs
crates/hexora_py/: Cargo.toml
crates/hexora_py/src/: lib.rs
crates/hexora_rules/: Cargo.toml
crates/hexora_rules/src/: checker.rs  lib.rs  pipeline.rs  result.rs
crates/hexora_rules/src/rules/: builtins.rs  call.rs  clipboard.rs  comments.rs  dll_injection.rs  download.rs  dunder.rs  env.rs  exec_test.rs  expression.rs  fingerprinting.rs  identifier.rs  imports.rs  install_hook.rs  literal.rs  mod.rs  screenshot.rs  statement.rs  test.rs  write.rs
crates/hexora_rules/src/rules/exec/: mod.rs  report.rs  sequence.rs  signals.rs  subjects.rs
crates/hexora_semantic/: Cargo.toml
crates/hexora_semantic/src/: analysis.rs  assignment.rs  expression_handler.rs  index.rs  lib.rs  model.rs  name.rs  node_transformer.rs  resolver.rs  scope.rs  taint.rs  tests.rs  visitor.rs
crates/hexora_semantic/src/strings/: helpers.rs  resolver.rs  tests.rs  transformer.rs
data/: excluded.txt
docs/: examples.md
hexora/: __init__.py  __init__.pyi
resources/test/: builtins_01.py  builtins_03.py  builtins_04.py  clipboard_01.py  comments_01.py  dll_injection_01.py  dunder_01.py  dunder_02.py  env_01.py  exec_01.py  exec_02.py  exec_03.py  exec_05.py  exec_06.py  identifier_01.py  literal_01.py  literal_03.py  literal_05.py  literal_06.py  literal_08.py
scripts/: download_pypi.py  dump_packages.py  labeler.py  monitor_packages.py  train.py
src/: cli.rs  lib.rs  macros.rs  main.rs  py.rs
src/audit/: annotate.rs  helpers.rs  mod.rs  parse.rs  resolver.rs  result.rs
src/indexer/: checker.rs  index.rs  locator.rs  mod.rs  name.rs  node_transformer.rs  semantic.rs  strings.rs  transformer.rs
src/rules/: builtins.rs  clipboard.rs  comments.rs  dll_injection.rs  download.rs  dunder.rs  env.rs  exec.rs  expression.rs  identifier.rs  imports.rs  literal.rs  mod.rs  statement.rs  test.rs
