[package]
name = "hexora"
version = "0.2.0"
edition = "2024"
description = "Static analysis of malicious Python scripts."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rushter/hexora"
homepage = "https://github.com/rushter/hexora"
keywords = ["python", "ast", "security", "audit"]
authors = ["Artem Golubin <me@rushter.com>"]
rust-version = "1.87.0"

[lib]
name = "hexora"
crate-type = ["cdylib", "rlib"]


[features]
default = []
python = [
    "pyo3",
]


[[bin]]
name = "hexora"
path = "src/main.rs"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev="a1fdd66f10a045a574efb20e422868b21decda40" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev="a1fdd66f10a045a574efb20e422868b21decda40" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff/", rev="a1fdd66f10a045a574efb20e422868b21decda40"}
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff/", rev="a1fdd66f10a045a574efb20e422868b21decda40" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", rev="a1fdd66f10a045a574efb20e422868b21decda40" }

pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
itertools = "0.14.0"
once_cell = "1.21.3"
regex = "1.11.2"
test-case = "3.3.1"
memchr = "2.7.5"
clap = { version = "4.5.45", features = ["derive"] }
walkdir = "2.5.0"
codespan-reporting = "0.12.0"
strum = "0.27.2"
strum_macros = "0.27.2"
serde_json = "1.0"
pythonize = "0.25.0"
sha2 = "0.11.0-rc.0"
rayon = "1.10.0"

[dev-dependencies]
unindent = "0.2.4"

[profile.dev]
opt-level = 1
lto = "thin"