[workspace]
members = ["crates/*"]
resolver = "2"
default-members = [
    "crates/hexora",
    "crates/hexora_io",
    "crates/hexora_ml",
    "crates/hexora_semantic",
    "crates/hexora_rules",
]
[workspace.package]
edition = "2024"
description = "Static analysis of malicious Python scripts."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rushter/hexora"
homepage = "https://github.com/rushter/hexora"
keywords = ["python", "ast", "security", "audit"]
authors = ["Artem Golubin <me@rushter.com>"]
rust-version = "1.90"


[profile.dev]
opt-level = 1
lto = "thin"

[workspace.lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"

[profile.dev.package."*"]
debug = false
