[package]
name = "hexora"
version = "0.2.1"
edition = "2024"
description = "Static analysis of malicious Python scripts."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rushter/hexora"
homepage = "https://github.com/rushter/hexora"
keywords = ["python", "ast", "security", "audit"]
authors = ["Artem Golubin <me@rushter.com>"]
rust-version = "1.90"

[lib]
name = "hexora"
crate-type = ["cdylib", "rlib"]


[features]
default = []
python = [
    "pyo3",
]


[[bin]]
name = "hexora"
path = "src/main.rs"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff/", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160"}
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff/", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160" }

pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.11.2"
test-case = "3.3.1"
memchr = "2.7.6"
clap = { version = "4.5.48", features = ["derive"] }
codespan-reporting = "0.12.0"
strum = "0.27.2"
strum_macros = "0.27.2"
serde_json = "1.0.145"
pythonize = "0.26.0"
sha2 = "0.11.0-rc.2"
encoding_rs = "0.8.35"
hexora_io = { path = "../hexora_io" }

[dev-dependencies]
unindent = "0.2.4"

[lints]
workspace = true
