[package]
name = "hexora"
version = "0.2.2"
edition = "2024"
description = "Static analysis of malicious Python scripts."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rushter/hexora"
homepage = "https://github.com/rushter/hexora"
keywords = ["python", "ast", "security", "audit"]
authors = ["Artem Golubin <me@rushter.com>"]
rust-version = "1.90"

[lib]
name = "hexora"
crate-type = ["rlib"]


[[bin]]
name = "hexora"
path = "src/main.rs"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff/", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", rev="3f63ea4b504d50eaf3c479de68e4017d2434a160" }

log = "0.4.17"
env_logger = "0.11.8"
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.10.2"
test-case = "3.3.1"
memchr = "2.7.1"
clap = { version = "4.5.3", features = ["derive"] }
codespan-reporting = "0.12.0"
strum = "0.27.0"
strum_macros = "0.27.0"
serde_json = "1.0.113"
sha2 = "0.11.0-rc.2"
hexora_io = { path = "../hexora_io" }

[dev-dependencies]
unindent = "0.2.4"

[lints]
workspace = true
