[package]
name = "hexora"
version = "0.2.4"
edition = "2024"
description = "Static analysis of malicious Python scripts."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rushter/hexora"
homepage = "https://github.com/rushter/hexora"
keywords = ["python", "ast", "security", "audit"]
authors = ["Artem Golubin <me@rushter.com>"]
rust-version = "1.90"

[lib]
name = "hexora"
crate-type = ["rlib"]


[[bin]]
name = "hexora"
path = "src/main.rs"

[dependencies]
hexora_ml = { path = "../hexora_ml" }
hexora_rules = { path = "../hexora_rules" }
hexora_semantic = { path = "../hexora_semantic" }
hexora_io = { path = "../hexora_io" }

ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }

log = "0.4.17"
env_logger = "0.11.8"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
codespan-reporting = "0.12.0"
serde_json = "1.0.113"
sha2 = "0.11.0-rc.2"

[lints]
workspace = true
