[package]
name = "hexora_io"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
walkdir = "2.5.0"
zip = "6.0.0"
tar = "0.4"
flate2 = "1.0"
encoding_rs = "0.8.35"
once_cell = "1.21.3"
base64 = "0.22.1"
regex = "1.10.2"
ruff_source_file = { git = "https://github.com/astral-sh/ruff/", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true

