[package]
name = "hexora_rules"
version = "0.2.4"
edition = "2024"
description = "Detection rules for Hexora"
license = "MIT"
repository = "https://github.com/rushter/hexora"
rust-version = "1.90"

[dependencies]
hexora_semantic = { path = "../hexora_semantic" }
hexora_io = { path = "../hexora_io" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
log = "0.4.17"
once_cell = "1.21.3"
regex = "1.10.2"
memchr = "2.7.1"
serde = { version = "1.0.197", features = ["derive"] }
strum = "0.27.0"
strum_macros = "0.27.0"
sha2 = "0.11.0-rc.2"

[dev-dependencies]
unindent = "0.2.4"
test-case = "3.3.1"

[lints]
workspace = true
