[package]
name = "hexora_semantic"
version = "0.3.0"
edition = "2024"
description = "Semantic analysis engine for Hexora"
license = "MIT"
repository = "https://github.com/rushter/hexora"
rust-version = "1.90"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff/", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", rev="9ad2da3015e5faf73bdc5f1d09df3e47238e3edf" }
hexora_io = { path = "../hexora_io" }
log = "0.4.17"
once_cell = "1.21.3"
regex = "1.10.2"
memchr = "2.7.1"

[dev-dependencies]
unindent = "0.2.4"

[lints]
workspace = true
